# carolapp-samples

./: .gitignore  Makefile  README.md
agente-sql-queries-demo/: READNE.md  complex-query-original.csql  complex-query-suggestion.csql  complex-query.csql  easy-query-original.csql  easy-query-suggestion.csql  easy-query.csql  project-query-original.csql  project-query.csql
batch-carolapp/: README.md
batch-carolapp-docker/: Dockerfile  README.md  requirements.txt
batch_carol_app_env_vars/: Dockerfile  Makefile  requirements-dev.txt  requirements.txt
batch_carolapp/: .gitignore  Dockerfile  Makefile  README.md  pytest.ini  requirements-dev.txt  requirements.txt  spec.json
dynamic-report/: .gitignore  Dockerfile  README.md  config.py  dashapp.py  requirements.txt
dynamic-report-d3/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  d3dynamicservicesapp.py  requirements.txt
low-latency/: employee.csql  employee_stg_embedding.csql  pipelines.json
mastering-carol/online-data-app/: Dockerfile  README.md  main.py  manifest.json  pyproject.toml  requirements.txt
online-app-bigquery/: Makefile  README.md  gunicorn.conf.py  main.py  manifest.json  requirements.txt
online-carol-app/: .dockerignore  Dockerfile  Makefile  README.md  gunicorn.conf.py  main.py  manifest.json  requirements.txt
online-carolapp/: README.md
online-nodejs-carolapp/: Dockerfile  carol.js  docker-entrypoint.sh  package-lock.json  package.json  passwords.js  server.js  utils.js
online_carolapp/: Dockerfile  Makefile  README.md  requirements.txt
sql-pipelines/: apinvoice.csql  (+3 more)
(+156 files in other folders)
